--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "movie_app",
+  "homepage": "https://adamczakon.github.io/formovie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-carousel-slider": "^2.0.13",
     "react-dom": "^16.8.6",
-    "react-id-swiper": "^2.1.2",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^4.3.5"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
